# macos-messages

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml
.claude/commands/: release.md
.github/workflows/: ci.yml
docs/: cli.md  index.md  installation.md  library.md  permissions.md  quickstart.md
src/messages/: __init__.py  __main__.py  cli.py  contacts.py  db.py  embeddings.py  hybrid_search.py  models.py  phone.py  search_index.py  text_processing.py
tests/: TEST_PLAN.md  conftest.py  test_cli.py  test_contacts.py  test_db.py  test_embeddings.py  test_errors.py  test_hybrid_search.py  test_models.py  test_phone.py  test_search_index.py  test_text_processing.py
