[project]
name = "macos-messages"
version = "0.1.1"
description = "Python library and CLI for reading macOS Messages.app data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Tom Pritchard", email = "tom@tpritc.com" }
]
keywords = ["imessage", "sms", "rcs", "macos", "messages", "chat", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "click>=8.0",
    "phonenumbers>=8.13",
]

[project.scripts]
messages = "messages.cli:cli"

[project.urls]
Homepage = "https://github.com/tpritc/macos-messages"
Documentation = "https://macos-messages.readthedocs.io"
Issues = "https://github.com/tpritc/macos-messages/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-shadcn>=0.2",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/messages"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-shadcn>=0.2",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
